--- a/Python_Basics_Assignment.ipynb
+++ b/Python_Basics_Assignment.ipynb
@@ -323,7 +323,7 @@
         "        reversed_s += s[index]\n",
         "        index -= 1\n",
         "\n",
-        "    print(\"Reversed string:\", reversed_s)**bold text**\n",
+        "    print(\"Reversed string:\", reversed_s)\n",
         "    ```\n",
         "15. Write a Python program to calculate the factorial of a number provided by the user using a while loop.\n",
         "    ```\n",
